# shrike

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.mjs  osv-scanner.toml  package.json  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: 01-plan.md  02-architecture.md  03-sync-pipeline.md  04-testing.md  05-versioning.md
scripts/: generate-icons.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  sync.rs  types.rs  webhook.rs
src-tauri/src/sync/: executor.rs  filelist.rs  mod.rs  validation.rs
src-tauri/tests/: sync_e2e.rs  webhook_e2e.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: about-page.test.tsx  about-page.tsx  drop-zone.test.tsx  drop-zone.tsx  file-list.test.tsx  file-list.tsx  settings-dialog.tsx  settings-page.test.tsx  settings-page.tsx  sync-button.test.tsx  sync-button.tsx  sync-log.test.tsx  sync-log.tsx  sync-summary.test.tsx  sync-summary.tsx  toolbar.test.tsx  toolbar.tsx  wizard-page.test.tsx  wizard-page.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  scroll-area.tsx
src/hooks/: use-file-list.ts  use-sync.ts
src/lib/: commands.ts  i18n.test.tsx  i18n.tsx  types.test.ts  types.ts  utils.test.ts
src/test/: test-utils.tsx
