[package]
name = "shrike"
version = "0.1.1"
description = "Selective file backup to Google Drive"
authors = ["nocoo"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49", features = ["full"] }
axum = "0.8"
thiserror = "2"
tempfile = "3"
tauri-plugin-dialog = "2.6.0"
dirs = "6.0.0"
hostname = "0.4"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
